[package]
name = "root-cause"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qemu-rs = {path = "../qemu-rs"}
modeling = {path = "../modeling"}
archive = {path = "../archive"}
common = {path = "../common"}
anyhow = "1.0.71"
log = "0.4.17"